[package]
name = "libsofa-sys"
version = "0.1.0"
authors = ["Andrea Riciputi <andrea.riciputi@gmail.com>"]
edition = "2018"
links = "sofa_c"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.54.1"
